Bug 124817 - FILEOPEN XLSX Some of the Excel line chart markers disappears in Calc
Summary: FILEOPEN XLSX Some of the Excel line chart markers disappears in Calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-04-18 09:56 UTC by NISZ LibreOffice Team
Modified: 2019-06-26 06:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file (21.42 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-04-18 09:57 UTC, NISZ LibreOffice Team
Details
Screenshot (148.29 KB, image/png)
2019-04-18 09:57 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-04-18 09:56:23 UTC
Description:
Some of the Excel line chart markers in XLSX documents created with Microsoft Excel disappears in Calc when the document is opened in LibreOffice Calc 6.3.0.0.alpha0+.

Steps to Reproduce:
    1. Open the attached XLSX file in LibreOffice Calc.
    2. Open a copy with Microsoft Excel.
    3. Compare the original file opened in Excel and Calc.
    4. View the attached screenshot.
    5. Notice, that some of the Microsoft Excel line chart markers disappears in LibreOffice Calc

Actual Results:
Some of the Excel line chart markers disappears when the document is opened in LibreOffice Calc 6.3.0.0.alpha0+.

Expected Results:
Line chart markers should be the same as the original file when the document is opened in Microsoft Excel.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.3.0.0.alpha0+
Build ID: 05a8749ee6f251d4b92eecb97763fa1fe94c68c8
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-04-18 09:57:30 UTC
Created attachment 150847 [details]
Test file
Comment 2 NISZ LibreOffice Team 2019-04-18 09:57:59 UTC
Created attachment 150848 [details]
Screenshot
Comment 3 raal 2019-04-18 16:21:06 UTC
Confirm with Version: 6.3.0.0.alpha0+
Build ID: 26e85974a0287ab5869e7ff0145a66b853d66a02
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 

This seems to have begun at the below commit.
Adding Cc: to Markus Mohrhard; Could you possibly take a look at this one? Thanks
 9952279a636afb1b086616d9677dcb21ed55a129 is the first bad commit
commit 9952279a636afb1b086616d9677dcb21ed55a129
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sun May 31 17:06:17 2015 -0500

    source 30936e3f6f8242950526ce9a0d02971a881b7910

author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2015-04-15 03:25:55 +0200
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2015-04-15 03:58:34 +0200
commit 30936e3f6f8242950526ce9a0d02971a881b7910 (patch)
tree 2521bb40d1e5dfa296e29bba40e87036eff9c247
parent 96c05f82cd4df35505497bc29d96c8a250072db0 (diff)
import marker color from OOXML, related tdf#81407
Comment 4 Commit Notification 2019-06-21 13:07:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e98f19e598951a54561a7f414a209260b5e79a39%5E%21

tdf#124817 OOXML chart import: fix missing symbols

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-06-25 15:10:26 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 52800731baf9fcb88e54d60de5585640c8f97f7b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!
Comment 6 Commit Notification 2019-06-26 06:27:44 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/ca19c39695558092e943d2db7aec3d39bdfe17e1%5E%21

tdf#124817 OOXML chart import: fix missing symbols

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.