tdf#124817 Chart OOXML Import: fix disappeared symbols

Set the "Bordercolor" of the symbol as a PROP_Color,
if the "Fillcolor" is empty, because MS-Office
symbols have a fillcolor and a linecolor too.

Change-Id: Ie4314ed56b63daa82fe30b111aeae9e358ff2b4b